--- a/Views/Account/AdminLogin.cshtml
+++ b/Views/Account/AdminLogin.cshtml
@@ -4,7 +4,7 @@
 
 <h2>Login</h2>
 
-<form asp-action="LoginPatient" method="post">
+<form asp-action="LoginAdmin" method="post">
     <div class="form-group">
         <label>Username</label>
         <input type="text" name="username" class="form-control" required />
