--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
                 <div class="card-body">
                     <h4 class="card-title text-primary">Admin</h4>
                     <p class="card-text">Manage system settings, users, and overall hospital administration.</p>
-                    <a asp-area="" asp-controller="Home" asp-action="Register" class="btn btn-primary">Get Started</a>
+                    <a asp-area="" asp-controller="Account" asp-action="AdminLogin" class="btn btn-primary">Get Started</a>
                 </div>
             </div>
         </div>
