--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                 <div class="card-body">
                     <h4 class="card-title text-primary">Doctor</h4>
                     <p class="card-text">Manage appointments, view patient history, streamline workflow.</p>
-                    <a href="#doctor" class="btn btn-primary">Get Started</a>
+                    <a asp-area="" asp-controller="Account" asp-action="DoctorLogin" class="btn btn-primary">Get Started</a>
                 </div>
             </div>
         </div>
