--- a/Views/Account/DoctorLogin.cshtml
+++ b/Views/Account/DoctorLogin.cshtml
@@ -31,7 +31,7 @@
                             <input type="password" class="form-control" id="password" name="password" required>
                         </div>
                         <div class="text-center">
-                        <button type="submit" class="btn btn-primary btn-block mt-3">Login</button>
+                            <button type="submit" class="btn btn-primary btn-block mt-3" id="doctorLoginBtn">Login</button>
                         </div>
                     </form>
                 </div>
@@ -39,3 +39,16 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <script>
+        $(function () {
+            $('#doctorLoginBtn').on('click', function () {
+                var u = $.trim($('#username').val());
+                if (u) {
+                    localStorage.setItem('doctorUsername', u);
+                }
+            });
+        });
+    </script>
+}
