--- a/Views/Patient/Index.cshtml
+++ b/Views/Patient/Index.cshtml
@@ -29,7 +29,7 @@
                     <td>
                         <a class="btn btn-info btn-sm" href="/Patient/Details/@patient.PatientId">Details</a>
                         <a class="btn btn-warning btn-sm" href="/Patient/Edit/@patient.PatientId">Edit</a>
-                        @* <a class="btn btn-danger btn-sm" href="/Patient/Delete/@patient.PatientId">Delete</a> *@
+                        <a class="btn btn-danger btn-sm" href="/Patient/Delete/@patient.PatientId">Delete</a> 
                     </td>
                 </tr>
             }
