--- a/Views/Patient/Index.cshtml
+++ b/Views/Patient/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container mt-4">
     <h2 class="mb-4">Patient List</h2>
-    <a class="btn btn-primary mb-3" href="/Patient/Create">Add New Patient</a>
+    <a class="btn btn-primary mb-3" href="/Patient/Create">Book a New Appoinment to Patinet</a>
     <table class="table table-bordered table-striped table-hover">
         <thead class="table-dark">
             <tr>
@@ -29,7 +29,7 @@
                     <td>
                         <a class="btn btn-info btn-sm" href="/Patient/Details/@patient.PatientId">Details</a>
                         <a class="btn btn-warning btn-sm" href="/Patient/Edit/@patient.PatientId">Edit</a>
-                        @* <a class="btn btn-danger btn-sm" href="/Patient/Delete/@patient.PatientId">Delete</a> *@
+                        <a class="btn btn-danger btn-sm" href="/Patient/Delete/@patient.PatientId">Delete</a> 
                     </td>
                 </tr>
             }
