--- a/Views/Account/DoctorLogin.cshtml
+++ b/Views/Account/DoctorLogin.cshtml
@@ -30,8 +30,9 @@
                             <label for="password">Password</label>
                             <input type="password" class="form-control" id="password" name="password" required>
                         </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn btn-primary btn-block mt-3" id="doctorLoginBtn">Login</button>
+                        <div class="text-center mt-3">
+                            <button type="submit" class="btn btn-primary btn-block" id="doctorLoginBtn">Login</button>
+                            <a asp-action="DoctorRegister" asp-controller="Account" class="btn btn-secondary ms-2">Register</a>
                         </div>
                     </form>
                 </div>
