--- a/Views/Account/PatientRegister.cshtml
+++ b/Views/Account/PatientRegister.cshtml
@@ -8,78 +8,57 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header bg-primary text-white text-center">
-                    <h3>Patient Login / Registration</h3>
+                    <h3>Patient Registration</h3>
                 </div>
                 <div class="card-body">
-                    <div id="loginPanel">
-                        <h3>Sign In</h3>
-                        <form asp-action="LoginPatient" method="post">
-                            <div class="form-group">
-                                <label for="username">Username</label>
-                                <input name="username" class="form-control" required />
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Password</label>
-                                <input name="password" type="password" class="form-control" required />
-                            </div>
-                            <button type="submit" class="btn btn-primary mt-2">Login</button>
-                            @if (ViewBag.Error != null)
-                            {
-                                <div class="text-danger mt-2">@ViewBag.Error</div>
-                            }
+                    <form asp-action="PatientRegister" method="post">
+                        <div class="form-group">
+                            <label asp-for="Name"></label>
+                            <input asp-for="Name" class="form-control" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="DateOfBirth"></label>
+                            <input asp-for="DateOfBirth" class="form-control" type="date" />
+                            <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Gender"></label>
+                            <select asp-for="Gender" class="form-control">
+                                <option value="">Select Gender</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                                <option value="Other">Other</option>
+                            </select>
+                            <span asp-validation-for="Gender" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="ContactNumber"></label>
+                            <input asp-for="ContactNumber" class="form-control" />
+                            <span asp-validation-for="ContactNumber" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Address"></label>
+                            <textarea asp-for="Address" class="form-control"></textarea>
+                            <span asp-validation-for="Address" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Username">Username</label>
+                            <input asp-for="Username" class="form-control" />
+                            <span asp-validation-for="Username" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Password">Password</label>
+                            <input asp-for="Password" type="password" class="form-control" />
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+                        
+                        </br>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Register</button>
+                            <a asp-action="PatientLogin" class="btn btn-secondary ms-2">Back to Login</a>
+                        </div>
                         </form>
-                        <hr />
-                        <p>Don't have an account? <a href="#" id="showRegisterBtn" class="btn btn-link">Register here</a></p>
-                    </div>
-
-                    <div id="registerPanel" style="display: none;">
-                        <h3>Register as Patient</h3>
-                        <form asp-action="Register" method="post">
-                            <div class="form-group">
-                                <label asp-for="Name"></label>
-                                <input asp-for="Name" class="form-control" />
-                                <span asp-validation-for="Name" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="DateOfBirth"></label>
-                                <input asp-for="DateOfBirth" class="form-control" type="date" />
-                                <span asp-validation-for="DateOfBirth" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="Gender"></label>
-                                <select asp-for="Gender" class="form-control">
-                                    <option value="">Select Gender</option>
-                                    <option value="Male">Male</option>
-                                    <option value="Female">Female</option>
-                                    <option value="Other">Other</option>
-                                </select>
-                                <span asp-validation-for="Gender" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="ContactNumber"></label>
-                                <input asp-for="ContactNumber" class="form-control" />
-                                <span asp-validation-for="ContactNumber" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="Address"></label>
-                                <textarea asp-for="Address" class="form-control"></textarea>
-                                <span asp-validation-for="Address" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="Username">Username</label>
-                                <input asp-for="Username" class="form-control" />
-                                <span asp-validation-for="Username" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="Password">Password</label>
-                                <input asp-for="Password" type="password" class="form-control" />
-                                <span asp-validation-for="Password" class="text-danger"></span>
-                            </div>
-                            <button type="submit" class="btn btn-success mt-2">Register</button>
-                            <hr />
-                            <p>Already have an account? <a href="#" id="showLoginBtn" class="btn btn-link">Sign in</a></p>
-                        </form>
-                    </div>
                 </div>
             </div>
         </div>
@@ -90,20 +69,4 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('#showRegisterBtn').on('click', function(e) {
-                e.preventDefault();
-                $('#loginPanel').hide();
-                $('#registerPanel').show();
-            });
-
-            $('#showLoginBtn').on('click', function(e) {
-                e.preventDefault();
-                $('#loginPanel').show();
-                $('#registerPanel').hide();
-            });
-        });
-    </script>
 }
